# hype-trader

./: .gitignore  Cargo.toml  README.md
docs/plans/: 2026-03-12-completion-roadmap.md  2026-03-12-hype-trader-design.md  2026-03-12-hype-trader-plan.md  2026-03-12-hyperliquid-api-integration.md
docs/superpowers/plans/: 2026-03-13-ui-components.md
src/: main.rs  models.rs  state.rs
src/components/: input_field.rs  mod.rs  pnl_text.rs  stat_card.rs  status_dot.rs  table.rs  theme.rs  toggle_button.rs
src/services/: config_service.rs  exchange_service.rs  info_service.rs  mod.rs  wallet_service.rs  ws_service.rs
src/views/: bottom_panel.rs  candle_chart.rs  main_view.rs  mod.rs  order_book.rs  order_panel.rs  symbol_list.rs  toast.rs  top_bar.rs  welcome_view.rs
