[package]
name = "hype-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
hyperliquid_rust_sdk = "0.6"
tokio = { version = "1", features = ["full"] }
ethers = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
